--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,19 +1,16 @@
 {
   "current": {
-    "sections": {
-      "header": {
-        "type": "header",
-        "settings": {
-        }
-      },
-      "footer": {
-        "type": "footer",
-        "settings": {
-        }
-      }
-    },
-    "settings": {
-      "favicon": "shopify://shop_images/favicon.png"
-    }
+    "color_primary": "#00d4ff",
+    "color_secondary": "#00ff88",
+    "heading_font": "helvetica_n4",
+    "body_font": "helvetica_n4",
+    "show_search": true,
+    "show_account": true,
+    "show_cart": true,
+    "show_newsletter": true,
+    "show_social_icons": true,
+    "newsletter_title": "اشترك في نشرتنا البريدية",
+    "newsletter_text": "<p>احصل على أحدث العروض والمنتجات مباشرة في بريدك الإلكتروني</p>",
+    "footer_text": "<p>متجر إلكترونياتكس - أفضل الأجهزة الإلكترونية بأسعار تنافسية</p>"
   }
 }
